fixing adventure list horizontal scroll and AdventureEvidence in css

--- a/frontend_adventure_challenge/src/App.css
+++ b/frontend_adventure_challenge/src/App.css
@@ -32,6 +32,56 @@ body {
   align-items: flex;
 }
 
+.horizontal-scroll-wrapper{
+  position:absolute;
+  display:block;
+  top:-15%;
+  left:0;
+  width:60%;
+  max-height:70%;
+  overflow-y:auto;
+  overflow-x:scroll;
+  transform:rotate(-90deg);
+}
+.horizontal-scroll-wrapper > div{
+  display:block;
+  padding:5px;
+  transform:rotate(90deg);
+}
+
+.squares{
+  padding: 10% 30% 10% 10%;
+}
+
+.squares > div{
+  width:400px;
+  height:400px;
+}.horizontal-scroll-wrapper{
+  position:absolute;
+  display:block;
+  top:-15%;
+  left:0;
+  width:60%;
+  max-height:70%;
+  overflow-y:auto;
+  overflow-x:scroll;
+  transform:rotate(-90deg);
+}
+.horizontal-scroll-wrapper > div{
+  display:block;
+  padding:5px;
+  transform:rotate(90deg);
+}
+
+.squares{
+  padding: 10% 30% 10% 10%;
+}
+
+.squares > div{
+  width:400px;
+  height:400px;
+}
+
 a:link {
   text-decoration: none;
 }
@@ -39,13 +89,6 @@ a:link {
 a.linkw {
   text-decoration: underline;
   color: white;
-}
-
-.horizontal-scroll-wrapper {
-  overflow-x: scroll;
-  overflow-y: hidden;
-  white-space: nowrap;
-
 }
   
 .boxed {
@@ -65,8 +108,11 @@ a.linkw {
   color: #fff;
   top: -10%;
   left: 50%;
-  display: inline-block;
+  display: block;
+  overflow-y: scroll;
 }
+
+.rowC{display:flex; flex-direction:row;}
 
 .shown {
   visibility: visible;
